--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest --maxWorkers 2  --coverage --verbose --watch",
+    "test": "npx jest --maxWorkers 2  --coverage --verbose --watchAll --no-cache",
     "format": "prettier --loglevel warn --write \"src/**/*.{jsx,js, ts}\"",
     "build": "npx tsc -p tsconfig.build.json",
-    "plato": "plato -r -d report dist"
+    "plato": "plato -r -d report dist --no-cache"
   },
   "author": "Janos Perge",
   "license": "ISC",
